Bug 343002 - Cantor doesn't save worksheet
Summary: Cantor doesn't save worksheet
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR critical
Target Milestone: ---
Assignee: Alexander Rieder
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-18 14:02 UTC by Minh Ngo
Modified: 2015-01-31 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Minh Ngo 2015-01-18 14:02:31 UTC
Cantor doesn't save worksheet data. Reproducing steps are below.

Reproducible: Always

Steps to Reproduce:
1. Create a python 2 worksheet
2. Type print 1
3. File -> Save As
4. Save somewhere (in my case ~/)
5. Check that this file doesn't exist.

Actual Results:  
The file doesn't exist

Expected Results:  
The file should be stored

reproduced in the frameworks branch
Comment 1 Minh Ngo 2015-01-31 11:56:46 UTC
Git commit 78650eb388ec10a1961612a1cbc1863088efee9d by Minh Ngo.
Committed on 31/01/2015 at 11:54.
Pushed by minhngo into branch 'frameworks'.

Fixing export cws files.

QUrl constructor accept only paths with a prefix "file:///" at the beginning.
QUrl::fromLocalFile() should be used instead.
REVIEW: 122263

M  +1    -1    src/cantor_part.cpp

http://commits.kde.org/cantor/78650eb388ec10a1961612a1cbc1863088efee9d