Fixing export cws files.

QUrl constructor accept only paths with a prefix "file:///" at the beginning.
QUrl::fromLocalFile() should be used instead.

BUG: 343002
REVIEW: 122263